# clawblink

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
bridge/whatsapp/: gateway.js  login.js  package-lock.json  package.json
builder/: config_builder.py  config_validator.py
clawblink/: __init__.py  cli.py
configs/: cnn-top-news-summarizer.yaml  gold-price-checker.yaml  indiatoday-news.yaml  linkedin-job-alerts.yaml
configs/telegram/: bitcoin-price-checker.yaml  gold-price-checker.yaml  hourly-weather-checker.yaml
configs/whatsapp/: bbc-news-checker.yaml  check-bbc-news.yaml  linkedin_ai_jobs_ny.yaml  premier-league-update.yaml  python-concept-summary.yaml  python-summary.yaml  remind-drink-water.yaml  remind-for-walk.yaml  silver-price-checker.yaml
engine/: runner.py
engine/actions/: __init__.py  http_request.py  llm_analyze.py  notify_telegram.py  notify_whatsapp.py
engine/triggers/: manual.py  polling.py  scheduled.py
interfaces/: __init__.py  cli.py  telegram_bot.py  whatsapp_bridge.py  whatsapp_twilio.py
providers/: __init__.py  gemini_provider.py  ollama_provider.py  openai_compat_provider.py
